5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4145/executions/1664_1397.log
== TEST (2019-04-16 10:06:25) 
-- CODE:
a = int(input("area a ser fertilizada em hectares: "))
ex = 
if(a <= 10000):
	cal = 5.00 * a
else:
	cal = 5.00 * a + (a - 10000) * 4.00 
print(cal)
-- ERROR:
File "XXXX", line 2
    ex = 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:06:34) 
-- CODE:
a = int(input("area a ser fertilizada em hectares: "))

if(a <= 10000):
	cal = 5.00 * a
else:
	cal = 5.00 * a + (a - 10000) * 4.00 
print(cal)
-- OUTPUT:
22770.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:07:12) 
-- CODE:
a = int(input("area a ser fertilizada em hectares: "))

if(a <= 10000):
	cal = 5.00 * a
else:
	cal = 5.00 * a + (a - 10000) * 4.00 
print(round(cal,2))
-- OUTPUT:
22770.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:07:27) 
-- CODE:
a = int(input("area a ser fertilizada em hectares: "))

if(a <= 10000):
	cal = 5.00 * a
else:
	cal = 5.00 * a + (a - 10000) * 4.00 
print(round(cal,2))
-- OUTPUT:
22770.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:07:29) 
-- CODE:
a = int(input("area a ser fertilizada em hectares: "))

if(a <= 10000):
	cal = 5.00 * a
else:
	cal = 5.00 * a + (a - 10000) * 4.00 
print(round(cal,2))
-- OUTPUT:
22770.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:08:31) 
-- CODE:
a = int(input("area a ser fertilizada em hectares: "))

if(a <= 10000):
	cal = 5.00 * a
else:
	cal = 5 * a + (a - 10000) * 4 
print(round(cal,2))
-- OUTPUT:
22770.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:09:04) 
-- CODE:
a = int(input("area a ser fertilizada em hectares: "))

if(a <= 10000):
	cal = 5.00 * a
else:
	cal = 5 * (a- 1000) + (a - 10000) * 4 
print(round(cal,2))
-- OUTPUT:
22770.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:09:09) 
-- CODE:
a = int(input("area a ser fertilizada em hectares: "))

if(a <= 10000):
	cal = 5.00 * a
else:
	cal = 5 * (a- 1000) + (a - 10000) * 4 
print(round(cal,2))
-- OUTPUT:
22770.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:09:12) 
-- CODE:
a = int(input("area a ser fertilizada em hectares: "))

if(a <= 10000):
	cal = 5.00 * a
else:
	cal = 5 * (a- 1000) + (a - 10000) * 4 
print(round(cal,2))
-- EXECUTION TIME:
0.122659
-- TEST CASE 1:
---- input:
4554
---- correct output:
22770.0
---- user output:
22770.0
-- TEST CASE 2:
---- input:
18215
---- correct output:
82860.0
---- user output:
118935
-- TEST CASE 3:
---- input:
9000
---- correct output:
45000.0
---- user output:
45000.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:10:21) 
-- CODE:
a = int(input("area a ser fertilizada em hectares: "))
ex = a - 10000
if(ex <= 0):
	cal = 5.00 * a
else:
	cal = 5 * (a - ex) + (ex) * 4 
print(round(cal,2))
-- OUTPUT:
22770.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:10:27) 
-- CODE:
a = int(input("area a ser fertilizada em hectares: "))
ex = a - 10000
if(ex <= 0):
	cal = 5.00 * a
else:
	cal = 5 * (a - ex) + (ex) * 4 
print(round(cal,2))
-- EXECUTION TIME:
0.176181
-- TEST CASE 1:
---- input:
4554
---- correct output:
22770.0
---- user output:
22770.0
-- TEST CASE 2:
---- input:
18215
---- correct output:
82860.0
---- user output:
82860
-- TEST CASE 3:
---- input:
9000
---- correct output:
45000.0
---- user output:
45000.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
